<resources>
    <string name="app_name">Управление мобильным персоналом - Энергетика</string>

    <!-- MainActivity -->
    <string name="activity_main_menu_routes">Реестр обходов</string>
    <string name="activity_main_menu_defects">Реестр дефектов</string>
    <string name="activity_main_menu_marks">Регистрация меток</string>
    <string name="activity_main_menu_settings">Настройки</string>
    <string name="activity_main_menu_logout">Выход</string>

    <!-- AuthorizationFragment -->
    <string name="fragment_auth_title">Вход</string>
    <string name="fragment_auth_server_settings">Настройки сервера</string>

    <!-- DetoursFragment -->
    <string name="fragment_routes_title">Реестр обходов</string>
    <string name="fragment_routes_route_list">Список</string>
    <string name="fragment_routes_route_calendar">Календарь</string>
    <string name="fragment_routes_expired_time">Просрочено время начала обхода</string>

    <!-- Technical Operations -->
    <string name="fragment_tech_operations_add_defect">Добавить дефект</string>
    <string name="fragment_tech_operations_defect">Дефекты</string>
    <string name="fragment_tech_operations_device">Оборудование</string>
    <string name="fragment_tech_operations_app_bar">Контрольная точка №</string>
    <string name="fragment_tech_operations_dialog_empty_fields_title">Не введены контрольные параметры</string>
    <string name="fragment_tech_operations_dialog_empty_fields_message">Вы действительно хотите завершить обход контрольной точки?</string>
    <string name="fragment_tech_operations_dialog_empty_fields_button_complete">Завершить</string>
    <string name="fragment_tech_operations_dialog_empty_fields_button_cancel">Отмена</string>
    <string name="fragment_tech_mark_is_different">Считанная метка не соответствует данной точке</string>

    <!-- AddDefect -->
    <string name="fragment_add_defect_toolbar_create">Фиксация дефекта</string>
    <string name="fragment_add_defect_toolbar_edit">Редактирование дефекта</string>
    <string name="fragment_add_defect_toolbar_confirm">Подтверждение дефекта</string>
    <string name="fragment_add_defect_drop_down_hint_device">Оборудование</string>
    <string name="fragment_add_defect_drop_down_hint_type_defect">Тип дефекта</string>
    <string name="fragment_add_defect_hint_date_confirm">Дата подтверждения</string>
    <string name="fragment_add_defect_drop_down_hint_description">Описание</string>
    <string name="fragment_btn_label_delete">Удалить</string>
    <string name="fragment_btn_label_edit">Редактировать</string>
    <string name="fragment_btn_label_confirm">Подтвердить дефект</string>
    <string name="fragment_btn_label_eliminated">Дефект устранен</string>
    <string name="fragment_title_select_device">Оборудование</string>
    <string name="fragment_add_defect_dialog_btn_ok">Ок</string>
    <string name="fragment_add_defect_dialog_btn_fix">Зафиксировать</string>
    <string name="fragment_add_defect_dialog_empty_fields_title">Не все поля заполнены</string>
    <string name="fragment_add_defect_snackbar_text_save">Дефект успешно сохранен</string>
    <string name="fragment_add_defect_dialog_empty_fields_no_detour_title">Не все поля по выявленному дефекту вне планового обхода заполнены</string>
    <string name="fragment_add_defect_dialog_empty_fields_subtitle">Вы хотите сохранить изменения?</string>
    <string name="fragment_add_defect_dialog_empty_fields_no_detour_subtitle">Хотите зафискировать дефект?</string>
    <string name="fragment_add_defect_dialog_empty_required_fields_subtitle">Не заполнены обязательные поля</string>
    <string name="fragment_add_defect_dialog_save_no_detour_title">Вы внесли данные по выявленному дефекту вне планового обхода</string>
    <string name="fragment_add_defect_search">Поиск</string>

    <!-- DefectListFragment -->
    <string name="fragment_defect_list_title">Реестр дефектов</string>
    <string name="fragment_defect_add_title">Фиксация дефекта</string>
    <string name="fragment_defect_edit_title">Просмотр дефектов</string>
    <string name="fragment_defect_card_link_detour">Плановой обход</string>
    <string name="fragment_defect_card_no_link_detour">Вне планового обхода</string>
    <string name="fragment_defect_dialog_delete_defect_subtitle">Вы действительно хотите удалить выявленный дефект?</string>
    <string name="fragment_defect_dialog_confirmed_defect_title">Вы внесли изменения в выявленный дефект</string>
    <string name="fragment_defect_dialog_eliminated_defect_title">Вы подтвердили устранение выявленного дефекта</string>
    <string name="fragment_defect_dialog_eliminated_defect_subtitle">Хотите сохранить изменения?</string>

    <!-- CheckpointGroupListFragment -->
    <string name="fragment_checkpoint_group_list_title">Группа</string>

    <!-- CheckpointDetailFragment -->
    <string name="fragment_checkpoint_detail_commentary">Комментарий</string>
    <string name="fragment_checkpoint_detail_saved_success">Метка успешно сохранена</string>
    <string name="fragment_checkpoint_title">Контрольные точки</string>
    <string name="fragment_dialog_rfid_duplicate">Данная метка уже зарегистрирована в системе %s</string>

    <!-- SettingsFragment -->
    <string name="fragment_settings_title">Настройки</string>

    <!-- RoutePointsFragment -->
    <string name="fragment_route_points_list">Список</string>
    <string name="fragment_route_points_map">Карта</string>

    <!-- RoutePointsMapFragment -->
    <string name="fragment_route_map_error">Ошибка загрузки карты</string>
    <string name="fragment_route_map_dialog">Маршрутные карты</string>

    <!-- RoutePointsListFragment -->
    <string name="factOrderFlag">Учитывать порядок обхода:</string>
    <string name="orderDuration">Длительность обхода:</string>

    <!-- SettingsFragment -->
    <string name="saveInfoDuration">Сохранять информацию на устройстве</string>

    <!-- EquipmentFragment -->
    <string name="equipmentCommonData">Общие данные</string>
    <string name="equipmentDefects">Дефекты</string>
    <string name="equipmentDocuments">Документы</string>
    <string name="equipment_specs_type_equipment">Тип единицы оборудования</string>
    <string name="equipment_specs_id_sap">ID_SAP</string>
    <string name="equipment_specs_name">Название</string>
    <string name="equipment_specs_code_tech_place">Код технического места</string>
    <string name="equipment_specs_name_tech_place">Название технического места</string>
    <string name="equipment_specs_construction_type">Тип конструкции</string>
    <string name="equipment_specs_material">Материал</string>
    <string name="equipment_specs_size">Величина/размер</string>
    <string name="equipment_specs_weight">Вес</string>
    <string name="equipment_specs_manufacturer">Изготовитель</string>
    <string name="equipment_specs_del_mark">Метка удаления</string>
    <string name="equipment_specs_valid_by">Действителен по</string>
    <string name="equipmentMeasurementPoints">Точки измерений</string>
    <string name="equipment_specs_pressure">Давление</string>
    <string name="equipment_specs_temperature">Температура</string>
    <string name="equipment_specs_rpm">Частота оборотов</string>
    <string name="equipmentWarranty">Гарантии</string>
    <string name="equipment_specs_warranty_start">Начало гарантии:</string>
    <string name="equipment_specs_warranty_end">Окончание гарантии:</string>

    <!-- EquipmentListFragment -->
    <string name="fragment_equipment_list_title">Перечень оборудования</string>
    <string name="fragment_equipment_list_type">Тип оборудования</string>
    <string name="fragment_equipment_list_name">Наименование</string>

    <!-- BtSyncPanelFragment -->

    <string name="get_data">Получение данных…</string>
    <string name="sync_detours">Обходы</string>
    <string name="sync_defects">Дефекты</string>
    <string name="sync_media">Медиа-файлы</string>
    <string name="sync_documents">Документация</string>
    <string name="sync_etc">Прочее</string>

    <!-- SyncFragment -->
    <string name="fragment_sync_get">Получение:</string>
    <string name="fragment_sync_send">Отправка:</string>
    <string name="fragment_sync_last_sync">Последняя синхронизация</string>
    <string name="fragment_get_data">Получить данные</string>
    <string name="fragment_sync_send_data">Отправить данные</string>
    <string name="fragment_sync_send_data_error">Сбой передачи данных. Повторите попытку</string>


    <!-- common -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="days">дней</string>
    <string name="error">Ошибка</string>
    <string name="ok">ОК</string>
    <string name="all_detours">Все обходы</string>

    <string name="fragment_scan">Сканировать</string>
    <string name="stop">Остановить</string>
    <string name="fragment_photo_video">Фото/Видео</string>
    <string name="fragment_media">Фото и видео: 0 из 8</string>
    <string name="fragment_not_media">Нет прикрепленных медиафайлов. Для добавления нажмите на кнопку &#171;фото/видео&#187;</string>
    <string name="fragment_dialog_changed_fields">Вы действительно хотите выйти без сохранения изменений?</string>
    <string name="fragment_media_list_title">Фото и видео: %s из 8</string>
    <string name="fragment_add_dialog_btn_delete">Удалить</string>
    <string name="fragment_dialog_btn_cancel">Отмена</string>
    <string name="enter">Войти</string>
    <string name="exit">Выйти</string>
    <string name="fragment_dialog_delete_subtitle">Вы действительно хотите удалить фото?</string>
    <string name="fragment_dialog_exit_app">Вы действительно хотите выйти из приложения?</string>
    <string name="fragment_dialog_confirmed_subtitle">Хотите сохранить изменения?</string>
    <string name="fragment_dialog_confirmed_title">Вы внесли изменения</string>
    <string name="fragment_dialog_point_completed_title">Все контрольные точки пройдены</string>
    <string name="fragment_dialog_points_completed_description">Вы уверены, что хотите сохранить обход и перейти в "Реестр обходов", или хотите внести правки?</string>
    <string name="rfid_s">RFID: %s</string>
    <string name="confirm">Подтвердить</string>
    <string name="proceed">Продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="password">Пароль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="auth">Авторизация</string>
    <string name="login_and_password_do_not_match">Неверный логин и пароль</string>
    <string name="sync">Синхронизация</string>
    <string name="server_unavailable">Невозможно соединиться с сервером</string>
    <string name="version_inline">Версия: %s</string>
    <string name="defect_num">Дефектов: %d</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

</resources>