<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar_with_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="103dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/llSaveInfoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSaveInfoDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveInfoDuration"
                android:textColor="@color/textMain" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSaveInfoDurationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="..."
                android:textColor="@color/elementLight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSaveInfoDurationPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textColor="@color/textMain" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/save"
            style="@style/inspection_button_text_compact" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>