<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="67dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEquipmentImages"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_equipment_image"
                tools:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:clipToPadding="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSpecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipmentCommonData"
                android:layout_marginTop="25dp"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:textColor="@color/elementsBlue"
                app:textAllCaps="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <TableLayout
                android:id="@+id/tlSpecs"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginTop="24dp"
                android:shrinkColumns="*"
                android:visibility="gone"
                tools:visibility="visible">

                <include
                    tools:layout="@layout/fragment_equipment_tab_common_data_specs_preview"
                    layout="@layout/empty_layout" />
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMeasurementPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipmentMeasurementPoints"
                android:layout_marginTop="30dp"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:textColor="@color/elementsBlue"
                app:textAllCaps="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <TableLayout
                android:id="@+id/tlMeasurementPoints"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                tools:visibility="visible">

                <include
                    tools:layout="@layout/fragment_equipment_tab_common_data_measurements_preview"
                    layout="@layout/empty_layout" />
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWarrantySpecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipmentWarranty"
                android:layout_marginTop="30dp"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:textColor="@color/elementsBlue"
                app:textAllCaps="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <TableLayout
                android:id="@+id/tlWarrantySpecs"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                tools:visibility="visible">

                <include
                    tools:layout="@layout/fragment_equipment_tab_common_data_waranty_preview"
                    layout="@layout/empty_layout" />
            </TableLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>